# chess

./: Cargo.toml
assets/boards/: starter.txt  test.txt
assets/images/: chess_board.ase
assets/themes/: catpuccin.css
src/: main.rs
src/app/: board_state.rs  mod.rs  theme.rs
src/app/board/: mod.rs  notations.rs  piece.rs  position.rs
src/app/board/piece/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
