[package]
name = "chess"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
    "serde",
] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
egui_dnd = "0.13.0"
serde_json = "1.0.141"
egui_infinite_scroll = "0.8.0"
crossbeam = "0.8.4"
regex = "1.11.1"
palette = "0.7.6"
anyhow = "1.0.98"

egui_extras = { version = "0.32.3", features = ["all_loaders"] }
